--- a/package.json
+++ b/package.json
@@ -9,17 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.5.2",
     "@types/node": "20.8.8",
     "@types/react": "18.2.31",
     "@types/react-dom": "18.2.14",
-    "autoprefixer": "10.4.16",
+    "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
+    "lodash": "^4.17.21",
     "next": "13.5.6",
-    "postcss": "8.4.31",
+    "next-auth": "^4.24.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.4",
-    "typescript": "5.2.2"
+    "react-icons": "^4.11.0",
+    "swr": "^2.2.4",
+    "typescript": "5.2.2",
+    "zustand": "^4.4.4"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
+    "@types/lodash": "^4.14.200",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "prisma": "^5.5.2",
+    "tailwindcss": "^3.3.4"
   }
 }
